fix: Color contrast ratio accessibility
Fixed Lighthouse "Background and foreground colors have a sufficient contrast ratio" by changing bg color of header area, linkbutton, and filter border and placeholder text. Lighthouse score 87 -> 89

Useful Resource: https://app.contrast-finder.org/

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   /* height: 500px; */
-  background-color: #007EE5;
+  background-color: #1E685B;
   text-align: center;
   display: flex;
   justify-content: center;
