--- a/src/components/LinkButton/LinkButton.css
+++ b/src/components/LinkButton/LinkButton.css
@@ -9,7 +9,7 @@
   border-radius: 2px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 
-  background-color: #2ecc71;
+  background-color: #CC2E88;
   color: #fff;
 
   -webkit-transition: background-color 0.3s;
