--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .topnav {
-    background-color:#007EE5;
+    background-color:#1E685B;
     overflow: hidden;
     text-align: right;
 }
